chore: Update ML model training logs

--- a/src/SWAT_auth/models/Test.ipynb
+++ b/src/SWAT_auth/models/Test.ipynb
@@ -122,7 +122,15 @@
       "Epoch 6/50\n",
       "110/110 [==============================] - 71s 647ms/step - loss: 0.6855 - accuracy: 0.5759 - val_loss: 0.6904 - val_accuracy: 0.5386\n",
       "Epoch 7/50\n",
-      " 96/110 [=========================>....] - ETA: 9s - loss: 0.6855 - accuracy: 0.5758 "
+      "110/110 [==============================] - 83s 754ms/step - loss: 0.6855 - accuracy: 0.5741 - val_loss: 0.6905 - val_accuracy: 0.5386\n",
+      "Epoch 8/50\n",
+      "110/110 [==============================] - 92s 833ms/step - loss: 0.6861 - accuracy: 0.5759 - val_loss: 0.6906 - val_accuracy: 0.5386\n",
+      "Epoch 9/50\n",
+      "110/110 [==============================] - 79s 721ms/step - loss: 0.6833 - accuracy: 0.5756 - val_loss: 0.6986 - val_accuracy: 0.5386\n",
+      "Epoch 10/50\n",
+      "110/110 [==============================] - 75s 678ms/step - loss: 0.6862 - accuracy: 0.5756 - val_loss: 0.6910 - val_accuracy: 0.5386\n",
+      "Epoch 11/50\n",
+      "110/110 [==============================] - 94s 854ms/step - loss: 0.6860 - accuracy: 0.5756 - val_loss: 0.6908 - val_accuracy: 0.5386\n"
      ]
     }
    ],
